[package]
name = "lvjb"
version = "0.1.0"
edition = "2024"

[dependencies]
jni = {version = "0.21.1", features = ["invocation"] }
reqwest = { version = "0.12.20", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = true
overflow-checks = false
